--- a/src/locales/lb.json
+++ b/src/locales/lb.json
@@ -30,16 +30,16 @@
                 "role": "Gérant & Kinésithérapeut",
                 "about": "Beruffleche Werdegang a Qualifikatiounen",
                 "bullets": [
-                    "Ofschloss als Physiotherapeut, kritt vun der „staatlich anerkannten Lehranstalt für Physiotherapie“ zu Wittlich am Joer 1996",
-                    "Komplett Ausbildung zum Fitnesstrainer duerch d’„Inline Unternehmensberatung GmbH“ zu Dorsten",
-                    "Fach-Weiterbildung mat Ulehnung un d’Bobath-Konzept 1997 zu Betzdorf",
+                    "Ofschloss als <strong>Physiotherapeut</strong>, kritt vun der „staatlich anerkannten Lehranstalt für Physiotherapie“ zu Wittlich am Joer 1996",
+                    "Komplett Ausbildung zum <strong>Fitnesstrainer</strong> duerch d’„Inline Unternehmensberatung GmbH“ zu Dorsten",
+                    "Fach-Weiterbildung mat Ulehnung un d’<strong>Bobath-Konzept</strong> 1997 zu Betzdorf",
                     "Ouverture vun der eegener Praxis am Joer 2005",
-                    "Manualtherapeut no S.O.M.T. an der „FIM Münster“ am Joer 2000",
-                    "Ausbildung zum Faszientherapeut duerch „INOMT“ an der „MFZ Hannover“ 2016",
-                    "Weiderbildung Medizinische Trainingstherapie 2018 zu Bad Neuenahr",
-                    "Ausbildung zum CMD-Therapeut am Joer 2020 duerch „FOMT“ an der „MFZ Hannover“",
-                    "Fortbildung Knorpelrehabilitation am Joer 2023",
-                    "Ausbildung zum Schwindel- a Vestibulartherapeut no „IVRT“ am Joer 2024 zu Koblenz"
+                    "<strong>Manualtherapeut no S.O.M.T.</strong> an der „FIM Münster“ am Joer 2000",
+                    "Ausbildung zum <strong>Faszientherapeut</strong> duerch „INOMT“ an der „MFZ Hannover“ 2016",
+                    "Weiderbildung <strong>Medizinische Trainingstherapie</strong> 2018 zu Bad Neuenahr",
+                    "Ausbildung zum <strong>CMD-Therapeut</strong> am Joer 2020 duerch „FOMT“ an der „MFZ Hannover“",
+                    "Fortbildung <strong>Knorpelrehabilitation</strong> am Joer 2023",
+                    "Ausbildung zum <strong>Schwindel- a Vestibulartherapeut no „IVRT“</strong> am Joer 2024 zu Koblenz"
                 ]
             },
             "paul": {
@@ -47,12 +47,12 @@
                 "role": "Kinésithérapeut",
                 "about": "Beruffleche Werdegang a Qualifikatiounen",
                 "bullets": [
-                    "Ofschloss als Physiotherapeut („Master en kinésithérapie et réadaptation“), kritt vun der „Université catholique de Louvain“ am Joer 2013",
-                    "Manualtherapeut no S.O.M.T. un der „Université de Liège“ am Joer 2017",
-                    "Vill Fortbildungen am Beräich Orthopädie a Sportphysiotherapie",
-                    "Komplett Ausbildung am „Dry Needling“ un der „David G Simmons Academy“",
-                    "Physiotherapeut vum Männer-Basketballteam BBC Etzella Ettelbruck",
-                    "Physiotherapeut vum Männer-Basketballnationalteam"
+                    "Ofschloss als <strong>Physiotherapeut</strong> („Master en kinésithérapie et réadaptation“), kritt vun der „Université catholique de Louvain“ am Joer 2013",
+                    "<strong>Manualtherapeut no S.O.M.T.</strong> un der „Université de Liège“ am Joer 2017",
+                    "Vill Fortbildungen am Beräich <strong>Orthopädie</strong> a <strong>Sportphysiotherapie</strong>",
+                    "Komplett Ausbildung am „<strong>Dry Needling</strong>“ un der „David G Simmons Academy“",
+                    "<strong>Physiotherapeut</strong> vum Männer-Basketballteam BBC Etzella Ettelbruck",
+                    "<strong>Physiotherapeut</strong> vum Männer-Basketballnationalteam"
                 ]
             },
             "birgit": {
@@ -60,10 +60,10 @@
                 "role": "Kinésithérapeutin",
                 "about": "Beruffleche Werdegang a Qualifikatiounen",
                 "bullets": [
-                    "Ofschloss als Physiotherapeutin, kritt vun der „staatlichen Schule für Physiotherapie Grünstadt“ am Joer 1988",
-                    "Ausbildung „manuelle Lymphdrainage/ komplexe Entstauungstherapie“ duerch d’„Lymphologic GmbH Deutschland“",
-                    "Vill Fortbildungen, ënner anerem an der Bewegungslehre no Klein-Vogelbach souwéi an der therapeutescher Kierperaarbecht no Feldenkrais",
-                    "Fortbildung „Narbenentstéierung“ mat Hëllef vun der Fussreflexzonentherapie",
+                    "Ofschloss als <strong>Physiotherapeutin</strong>, kritt vun der „staatlichen Schule für Physiotherapie Grünstadt“ am Joer 1988",
+                    "Ausbildung „<strong>manuelle Lymphdrainage</strong>/ <strong>komplexe Entstauungstherapie</strong>“ duerch d’„Lymphologic GmbH Deutschland“",
+                    "Vill Fortbildungen, ënner anerem an der <strong>Bewegungslehre no Klein-Vogelbach</strong> souwéi an der <strong>therapeutescher Kierperaarbecht no Feldenkrais</strong>",
+                    "Fortbildung „<strong>Narbenentstéierung</strong>“ mat Hëllef vun der <strong>Fussreflexzonentherapie</strong>",
                     "Jorelaang Erfarung an der Aarbecht mat Mënsche mat kierperlechen a geeschtegen Aschränkungen"
                 ]
             },
@@ -72,11 +72,11 @@
                 "role": "Kinésithérapeut",
                 "about": "Beruffleche Werdegang a Qualifikatiounen",
                 "bullets": [
-                    "Ofschloss als Physiotherapeut („Bachelor of Science“), kritt vun der „staatlich anerkannten, privaten Hochschule Fresenius“ zu Köln am Joer 2024",
-                    "An Ausbildung zum Manualtherapeut no S.O.M.T. an der „FIM Münster“",
-                    "Fortbildung zum Faszientherapeut",
-                    "Fortbildung „Sportphysiotherapie“ an der „EDEN-Reha“ zu Donaustauf",
-                    "Physiotherapeut vun der Fussballmannschaft FC47 Bastendorf"
+                    "Ofschloss als <strong>Physiotherapeut</strong> („Bachelor of Science“), kritt vun der „staatlich anerkannten, privaten Hochschule Fresenius“ zu Köln am Joer 2024",
+                    "An Ausbildung zum <strong>Manualtherapeut no S.O.M.T.</strong> an der „FIM Münster“",
+                    "Fortbildung zum <strong>Faszientherapeut</strong>",
+                    "Fortbildung „<strong>Sportphysiotherapie</strong>“ an der „EDEN-Reha“ zu Donaustauf",
+                    "<strong>Physiotherapeut</strong> vun der Fussballmannschaft FC47 Bastendorf"
                 ]
             }
         }
