Fix: update SEO titles and descriptions for French and Luxembourgish localization files

--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -1,8 +1,8 @@
 {
     "seo": {
         "home": {
-            "title": "Kinésithérapie Ingo Pauls - Physiothérapie à Diekirch",
-            "description": "Bienvenue chez Kinésithérapie Ingo Pauls à Diekirch. Nous offrons une physiothérapie professionnelle pour un soulagement durable de la douleur et une meilleure mobilité."
+            "title": "Kinésithérapie Ingo Pauls - Kinésithérapie à Diekirch",
+            "description": "Bienvenue chez Kinésithérapie Ingo Pauls à Diekirch. Nous offrons une kinésithérapie professionnelle pour un soulagement durable de la douleur et une meilleure mobilité."
         }
     },
     "nav": {
