--- a/src/locales/lb.json
+++ b/src/locales/lb.json
@@ -1,8 +1,8 @@
 {
     "seo": {
         "home": {
-            "title": "Kinésithérapie Ingo Pauls - Physiotherapie zu Dikkrech",
-            "description": "Wëllkomm bei der Kinésithérapie Ingo Pauls zu Dikkrech. Mir bidden professionell Physiotherapie fir laangfristeg manner Péng a besser Beweglechkeet un."
+            "title": "Kinésithérapie Ingo Pauls - Kinésithérapie zu Dikkrech",
+            "description": "Wëllkomm bei der Kinésithérapie Ingo Pauls zu Dikkrech. Mir bidden professionell Kinésithérapie fir laangfristeg manner Péng a besser Beweglechkeet un."
         }
     },
     "nav": {
