Fix bold text in psychosomatic birth preparation across localization files and adjust hero background position

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -62,7 +62,7 @@
                 "bullets": [
                     "Degree as a <strong>physiotherapist</strong> from the “State School of Physiotherapy Grünstadt” (1988)",
                     "Training in “<strong>Manual Lymphatic Drainage</strong> / <strong>Complex Decongestive Therapy</strong>” through “Lymphologic GmbH Deutschland”",
-                    "Training in psychosomatic <strong>birth preparation</strong>",
+                    "Training in <strong>psychosomatic birth preparation</strong>",
                     "Numerous continuing-education courses, including <strong>movement instruction according to Klein-Vogelbach</strong> and <strong>therapeutic bodywork according to Feldenkrais</strong>",
                     "Continuing education in <strong>scar treatment</strong> using <strong>foot reflexology</strong>",
                     "Many years of experience working with people with physical and intellectual disabilities"
