--- a/src/locales/lb.json
+++ b/src/locales/lb.json
@@ -62,7 +62,7 @@
                 "bullets": [
                     "Ofschloss als <strong>Physiotherapeutin</strong>, kritt vun der „staatlichen Schule für Physiotherapie Grünstadt“ am Joer 1988",
                     "Ausbildung „<strong>manuelle Lymphdrainage</strong>/ <strong>komplexe Entstauungstherapie</strong>“ duerch d’„Lymphologic GmbH Deutschland“",
-                    "Formatioun an der psychosomatescher <strong>Gebuertsvirbereedung</strong>",
+                    "Formatioun an der <strong>psychosomatescher Gebuertsvirbereedung</strong>",
                     "Vill Fortbildungen, ënner anerem an der <strong>Bewegungslehre no Klein-Vogelbach</strong> souwéi an der <strong>therapeutescher Kierperaarbecht no Feldenkrais</strong>",
                     "Fortbildung „<strong>Narbenentstéierung</strong>“ mat Hëllef vun der <strong>Fussreflexzonentherapie</strong>",
                     "Jorelaang Erfarung an der Aarbecht mat Mënsche mat kierperlechen a geeschtegen Aschränkungen"
